Rozpoczecie implementacji JWT i Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jackson.time-zone=UTC
 ## Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
+##SECURITY
+kruczek.com.jwtSecret=jwtSecret
+kruczek.com.jwtExp=86400
