Rozpoczecie implementacji JWT i Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,6 +26,7 @@ spring.datasource.validationQuery = SELECT 1
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
@@ -42,3 +43,7 @@ spring.jackson.time-zone= UTC
 
 ## Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
+
+##SECURITY
+kruczek.com.jwtSecret=jwtSecret
+kruczek.com.jwtExp=86400
