--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.validationQuery = SELECT 1
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
@@ -47,3 +47,5 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 ##SECURITY
 kruczek.com.jwtSecret=jwtSecret
 kruczek.com.jwtExp=86400
+
+logging.level.root=info
