#04 Implementacja JWT cd

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,9 @@ spring.datasource.validationQuery=SELECT 1
 # stripped before adding them to the entity manager).
 # Show or not log for each sql query
 spring.jpa.show-sql=true
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=false
+
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
@@ -32,3 +35,5 @@ spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
 ##SECURITY
 kruczek.com.jwtSecret=jwtSecret
 kruczek.com.jwtExp=86400
+
+logging.level.root=info
