--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,51 +1,30 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
-
 # Set here configurations for the database connection
-
 # Connection url for the database
-spring.datasource.url = jdbc:mysql://localhost:3306/todoDB?useSSL=false
-
+spring.datasource.url=jdbc:mysql://localhost:3306/todoDB?useSSL=false
 # Username and password
-spring.datasource.username = root
-spring.datasource.password = root
-
+spring.datasource.username=root
+spring.datasource.password=root
 # Keep the connection alive if idle for a long time (needed in production)
-spring.datasource.testWhileIdle = true
-spring.datasource.validationQuery = SELECT 1
-
-
-
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
 # ===============================
 # = JPA / HIBERNATE
 # ===============================
-
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager).
-
 # Show or not log for each sql query
-spring.jpa.show-sql = true
-spring.jpa.properties.hibernate.format_sql=false
-
+spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "update" the database
 # schema will be automatically updated accordingly to java entities found in
 # the project
-spring.jpa.hibernate.ddl-auto = update
-
-
+spring.jpa.hibernate.ddl-auto=update
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 ## Jackson Properties
-spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false
-spring.jackson.time-zone= UTC
-
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+spring.jackson.time-zone=UTC
 ## Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.xml
-
-##SECURITY
-kruczek.com.jwtSecret=jwtSecret
-kruczek.com.jwtExp=86400
-
-logging.level.root=info
