--- a/pom.xml
+++ b/pom.xml
@@ -97,14 +97,12 @@
         </dependency>
 
         <!--testing-->
-<!--
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>test</scope>
-            <version>1.4.194</version>
-        </dependency>
--->
+        <!--        <dependency>
+                    <groupId>com.h2database</groupId>
+                    <artifactId>h2</artifactId>
+                    <scope>test</scope>
+                    <version>1.4.194</version>
+                </dependency>-->
 
     </dependencies>
 
